[gd_scene load_steps=23 format=3 uid="uid://ctkdvsw52utxe"]

[ext_resource type="PackedScene" uid="uid://b1g2bkbuln40b" path="res://Player/player.tscn" id="1_ie0jj"]
[ext_resource type="PackedScene" uid="uid://cgtmwfxq5uaop" path="res://Death/Death.tscn" id="2_j0mdi"]
[ext_resource type="Texture2D" uid="uid://3yadqa4f8vv5" path="res://Sprites/Other Sprites/SkyBackground.png" id="3_vacts"]
[ext_resource type="PackedScene" uid="uid://drs6njogmm04s" path="res://Player/player_2.tscn" id="4_bc6fw"]
[ext_resource type="Script" path="res://Grid/MainGridSystem.gd" id="5_owb2l"]
[ext_resource type="Texture2D" uid="uid://5epn23y2qr0w" path="res://Sprites/Blocks/WaterBlockD.png" id="6_jaorp"]
[ext_resource type="Texture2D" uid="uid://dqae66sixp8so" path="res://Sprites/Blocks/WaterBlockS.png" id="7_w1b48"]
[ext_resource type="Texture2D" uid="uid://baf1jpmcc5bu3" path="res://Sprites/Blocks/BlueBlock.png" id="8_rmqbq"]
[ext_resource type="Texture2D" uid="uid://cauf2jssrnf2x" path="res://Sprites/Blocks/DarkBlueBlock.png" id="9_gdvjf"]
[ext_resource type="Texture2D" uid="uid://demwwahqcclkh" path="res://Sprites/Blocks/GreenBlock.png" id="10_vnbel"]
[ext_resource type="Texture2D" uid="uid://44n8gjc4e6bt" path="res://Sprites/Blocks/OrangeBlock.png" id="11_ktmar"]
[ext_resource type="Texture2D" uid="uid://6vvb02ahvu3e" path="res://Sprites/Blocks/PinkBlock.png" id="12_2ju53"]
[ext_resource type="Texture2D" uid="uid://c1fp1lawjpjat" path="res://Sprites/Blocks/RedBlock.png" id="13_6atk8"]
[ext_resource type="Texture2D" uid="uid://bhloxmnkbognx" path="res://Sprites/Blocks/YellowBlock.png" id="14_opavj"]
[ext_resource type="Script" path="res://scripts/DrawShape.gd" id="15_l4s1b"]
[ext_resource type="Texture2D" uid="uid://bhwigjm6u8rbt" path="res://Sprites/Other Sprites/CloudBoarder.png" id="16_2yx7x"]
[ext_resource type="Script" path="res://Water/Water.gd" id="17_0cljd"]
[ext_resource type="Texture2D" uid="uid://bdqc6wuv7dowe" path="res://Sprites/Other Sprites/CloudBoarderEvil.png" id="18_bs1lc"]
[ext_resource type="PackedScene" uid="uid://niru1fo8yq7v" path="res://Water Damage/water_damage.tscn" id="19_7ytil"]
[ext_resource type="PackedScene" uid="uid://dxgs7a0ibnxlq" path="res://Timer/Water_timer.tscn" id="20_j6yh4"]

[sub_resource type="GDScript" id="GDScript_xbwqi"]
script/source = "extends Node2D

var peer = ENetMultiplayerPeer.new()
@export var player_scene: PackedScene

func _on_host_pressed():
	peer.create_server(135)
	multiplayer.multiplayer_peer = peer
	multiplayer.peer_connected.connect(_add_player)
	_add_player(1)

func _add_player(id):
	var player = player_scene.instantiate()
	player.name = str(id)
	call_deferred(\"add_child\", player)

func _on_join_pressed():
	peer.create_client(\"localhost\", 135)
	multiplayer.multiplayer_peer = peer
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fcsxc"]

[node name="Multiplayer_Test" type="Node2D"]
script = SubResource("GDScript_xbwqi")
player_scene = ExtResource("1_ie0jj")

[node name="Death" parent="." instance=ExtResource("2_j0mdi")]

[node name="SkyBackground" type="Sprite2D" parent="."]
position = Vector2(964, 535)
texture = ExtResource("3_vacts")

[node name="Player" parent="." instance=ExtResource("1_ie0jj")]
position = Vector2(400, 800)
player_id = 1

[node name="Player2" parent="." instance=ExtResource("4_bc6fw")]
position = Vector2(1310, 800)
player_id = 2

[node name="MainGrid" type="Node2D" parent="."]
position = Vector2(240, 800)
script = ExtResource("5_owb2l")
player_id = 1
cloudTextures = Array[Texture2D]([ExtResource("6_jaorp"), ExtResource("7_w1b48"), ExtResource("8_rmqbq"), ExtResource("9_gdvjf"), ExtResource("10_vnbel"), ExtResource("11_ktmar"), ExtResource("12_2ju53"), ExtResource("13_6atk8"), ExtResource("14_opavj")])
rowRenderOffset = 32.0
colRenderOffset = 32.0
FBGResetPosition = Vector2i(3, 20)

[node name="GridBlockFallTimer" type="Timer" parent="MainGrid"]
process_callback = 0
wait_time = 0.5
autostart = true

[node name="block selection" type="Node2D" parent="MainGrid"]
position = Vector2(400, -600)
script = ExtResource("15_l4s1b")
textureArray = Array[Texture2D]([ExtResource("8_rmqbq"), ExtResource("9_gdvjf"), ExtResource("10_vnbel"), ExtResource("11_ktmar"), ExtResource("12_2ju53"), ExtResource("13_6atk8"), ExtResource("14_opavj")])

[node name="floor" type="StaticBody2D" parent="MainGrid"]
position = Vector2(160, 48)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainGrid/floor"]
scale = Vector2(20, 1)
shape = SubResource("RectangleShape2D_fcsxc")

[node name="Sprite2D" type="Sprite2D" parent="MainGrid/floor"]
position = Vector2(0, -330)
texture = ExtResource("16_2yx7x")

[node name="wall_Left" type="StaticBody2D" parent="MainGrid"]
position = Vector2(-16, -320)
scale = Vector2(1, 22.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainGrid/wall_Left"]
scale = Vector2(1, 2)
shape = SubResource("RectangleShape2D_fcsxc")

[node name="wall_right" type="StaticBody2D" parent="MainGrid"]
position = Vector2(336, -320)
scale = Vector2(1, 22.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainGrid/wall_right"]
scale = Vector2(1, 2)
shape = SubResource("RectangleShape2D_fcsxc")

[node name="waterSystem" type="Node2D" parent="MainGrid"]
script = ExtResource("17_0cljd")

[node name="Timer" type="Timer" parent="MainGrid/waterSystem"]
wait_time = 30.0
autostart = true

[node name="MainGrid2" type="Node2D" parent="."]
position = Vector2(1150, 800)
script = ExtResource("5_owb2l")
player_id = 2
cloudTextures = Array[Texture2D]([ExtResource("6_jaorp"), ExtResource("7_w1b48"), ExtResource("8_rmqbq"), ExtResource("9_gdvjf"), ExtResource("10_vnbel"), ExtResource("11_ktmar"), ExtResource("12_2ju53"), ExtResource("13_6atk8"), ExtResource("14_opavj")])
rowRenderOffset = 32.0
colRenderOffset = 32.0
FBGResetPosition = Vector2i(3, 20)

[node name="GridBlockFallTimer" type="Timer" parent="MainGrid2"]
process_callback = 0
wait_time = 0.5
autostart = true

[node name="block selection" type="Node2D" parent="MainGrid2"]
position = Vector2(400, -600)
script = ExtResource("15_l4s1b")
textureArray = Array[Texture2D]([ExtResource("8_rmqbq"), ExtResource("9_gdvjf"), ExtResource("10_vnbel"), ExtResource("11_ktmar"), ExtResource("12_2ju53"), ExtResource("13_6atk8"), ExtResource("14_opavj")])

[node name="floor" type="StaticBody2D" parent="MainGrid2"]
position = Vector2(160, 48)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainGrid2/floor"]
scale = Vector2(20, 1)
shape = SubResource("RectangleShape2D_fcsxc")

[node name="Sprite2D" type="Sprite2D" parent="MainGrid2/floor"]
position = Vector2(0, -330)
texture = ExtResource("18_bs1lc")

[node name="wall_Left" type="StaticBody2D" parent="MainGrid2"]
position = Vector2(-16, -320)
scale = Vector2(1, 22.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainGrid2/wall_Left"]
scale = Vector2(1, 2)
shape = SubResource("RectangleShape2D_fcsxc")

[node name="wall_right" type="StaticBody2D" parent="MainGrid2"]
position = Vector2(336, -320)
scale = Vector2(1, 22.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainGrid2/wall_right"]
scale = Vector2(1, 2)
shape = SubResource("RectangleShape2D_fcsxc")

[node name="waterSystem" type="Node2D" parent="MainGrid2"]
script = ExtResource("17_0cljd")

[node name="Timer" type="Timer" parent="MainGrid2/waterSystem"]
wait_time = 30.0
autostart = true

[node name="Water_Damage" parent="." instance=ExtResource("19_7ytil")]
position = Vector2(187, 839)

[node name="Water_Damage2" parent="." instance=ExtResource("19_7ytil")]
position = Vector2(1100, 839)

[node name="WaterTimer" parent="." instance=ExtResource("20_j6yh4")]

[connection signal="death" from="Player" to="Death" method="MultiplayerDie"]
[connection signal="FBGResetArray" from="MainGrid" to="MainGrid/block selection" method="NextShape"]
[connection signal="SendWater" from="MainGrid" to="MainGrid/waterSystem" method="WaterRise"]
[connection signal="StopBlockFallTimer" from="MainGrid" to="MainGrid/GridBlockFallTimer" method="stop"]
[connection signal="timeout" from="MainGrid/GridBlockFallTimer" to="MainGrid" method="FBGBlockFall"]
[connection signal="changeFBGArray" from="MainGrid/block selection" to="MainGrid" method="ChangeFBGArray"]
[connection signal="fillRow" from="MainGrid/waterSystem" to="MainGrid" method="MainGridRowFill"]
[connection signal="stop" from="MainGrid/waterSystem" to="MainGrid/waterSystem/Timer" method="stop"]
[connection signal="updateTextures" from="MainGrid/waterSystem" to="MainGrid" method="updateTextures"]
[connection signal="timeout" from="MainGrid/waterSystem/Timer" to="MainGrid/waterSystem" method="WaterRise" binds= [1]]
[connection signal="FBGResetArray" from="MainGrid2" to="MainGrid2/block selection" method="NextShape"]
[connection signal="SendWater" from="MainGrid2" to="MainGrid2/waterSystem" method="WaterRise"]
[connection signal="StopBlockFallTimer" from="MainGrid2" to="MainGrid2/GridBlockFallTimer" method="stop"]
[connection signal="timeout" from="MainGrid2/GridBlockFallTimer" to="MainGrid2" method="FBGBlockFall"]
[connection signal="changeFBGArray" from="MainGrid2/block selection" to="MainGrid2" method="ChangeFBGArray"]
[connection signal="fillRow" from="MainGrid2/waterSystem" to="MainGrid2" method="MainGridRowFill"]
[connection signal="stop" from="MainGrid2/waterSystem" to="MainGrid2/waterSystem/Timer" method="stop"]
[connection signal="updateTextures" from="MainGrid2/waterSystem" to="MainGrid2" method="updateTextures"]
[connection signal="timeout" from="MainGrid2/waterSystem/Timer" to="MainGrid2/waterSystem" method="WaterRise" binds= [1]]
[connection signal="rise" from="WaterTimer" to="Water_Damage" method="_on_water_timer_rise"]
[connection signal="rise" from="WaterTimer" to="Water_Damage2" method="_on_water_timer_rise"]
